assets/style.css
.realbutton{
    background-color: #1B424C; 
    font-size: 14px; 
    border-radius:40px; 
    padding:10px 20px; 
    border:none; 
    color:white;
}

.getstarted{
    background-color:#ffffff;
    font-size:13px;
    border-radius:40px;
    padding:7px 15px;
    border-color:#1B424C;
    color:#1B424C;
    border:2px solid;
    font-weight:bold;
}

a.nav-link{
    font-size: 1.1rem;
}

a.navbar-brand{
    font-size:1.7rem;
    font-weight:bold;
}

.raleway-bold {
    font-family: "Raleway", sans-serif;
    font-optical-sizing: auto;
    font-weight: bold;
    font-style: normal;
  }

.raleway{
    font-family: "Raleway", sans-serif;
    font-optical-sizing: auto;
    font-weight: normal;
    font-style: normal;
}
  
.initialtext{
    font-size:0.9rem;
    font-weight:500;
    color:rgb(87, 85, 85)
}

.bigtext{
    font-weight:bold;
    font-size:3.5rem;
    color:#1B424C;
}

.image-right{
    width:32rem;
    height:22rem;
}

.headert1{
    color:#1B424C;
}

.headert2{
    color:#51CC74;
}

